worked on sign up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="start_string">Start</string>
     <string name="reset_string">Reset</string>
     <string name="pause_string">Pause</string>
+    <string name="sign_up_string">Sign Up</string>
 </resources>
