--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Kronicle</string>
+    <string name="app_name_upper">KRONICLE</string>
     <string name="name_string">Name</string>
     <string name="last_name_string">Last Name</string>
     <string name="email_string">Email Address</string>
@@ -14,5 +15,4 @@
     <string name="settings">Settings</string>
     <string name="about">About</string>
     <string name="sign_up_string">Sign Up</string>
-
 </resources>
