--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,19 @@
 <resources>
     <string name="app_name">Kronicle</string>
     <string name="app_name_upper">KRONICLE</string>
-    <string name="name_string">Name</string>
-    <string name="last_name_string">Last Name</string>
-    <string name="email_string">Email Address</string>
-    <string name="password_string">Password</string>
-    <string name="comfirm_password_string">Comfirm Password</string>
-    <string name="submit_string">Submit</string>
-    <string name="start_string">Start</string>
-    <string name="reset_string">Reset</string>
-    <string name="pause_string">Pause</string>
+    <string name="name">Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="email">Email Address</string>
+    <string name="password">Password</string>
+    <string name="comfirm_password">Comfirm Password</string>
+    <string name="submit">Submit</string>
+    <string name="start">Start</string>
+    <string name="reset">Reset</string>
+    <string name="pause">Pause</string>
     <string name="home">Home</string>
-    <string name="myacc">My Account</string>
+    <string name="my_account">My Account</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
-    <string name="sign_up_string">Sign Up</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="sign_in">Sign In</string>
 </resources>
