Guest, Bug, and Button Wiring
- Guest Login Functionality now enabled
- Fixed if / else if bug in sign up page
- Wired Sign up page to main activity
- Adjusted the Intro page a bit, adjusted height of image
and added fully-functional login-as-guest button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="about">About</string>
     <string name="sign_up">Sign Up</string>
     <string name="sign_in">Sign In</string>
+    <string name="cont_guest">Continue as Guest</string>
 </resources>
