--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,29 @@
 <resources>
     <string name="app_name">Kronicle</string>
     <string name="app_name_upper">KRONICLE</string>
+
     <string name="name">Name</string>
     <string name="last_name">Last Name</string>
     <string name="email">Email Address</string>
     <string name="password">Password</string>
-    <string name="comfirm_password">Comfirm Password</string>
+    <string name="confirm_password">Confirm Password</string>
+
     <string name="submit">Submit</string>
+
+    <string name="notes">Notes</string>
+    <string name="timer">Timer</string>
+    <string name="habits">Habits</string>
+
     <string name="start">Start</string>
     <string name="reset">Reset</string>
     <string name="pause">Pause</string>
+
     <string name="home">Home</string>
     <string name="my_account">My Account</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
+
     <string name="sign_up">Sign Up</string>
     <string name="sign_in">Sign In</string>
-    <string name="cont_guest">Continue as Guest</string>
+    <string name="continue_guest">Continue as Guest</string>
 </resources>
