--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="sign_up">Sign Up</string>
     <string name="sign_in">Sign In</string>
     <string name="continue_guest">Continue as a Guest</string>
+    <string name="username">User Name</string>
+    <string name="birth_date">Birth Date</string>
 </resources>
