--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,15 @@
 <resources>
     <string name="kronicle">Kronicle</string>
-    <string name="kronicle_upper">KRONICLE</string>
 
-    <string name="name">Name</string>
-    <string name="last_name">Last Name</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="sign_in">Sign In</string>
+    <string name="continue_guest">Continue as a Guest</string>
+
+    <string name="username">User Name</string>
+    <string name="birth_date">Birth Date</string>
     <string name="email">Email Address</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
-
-    <string name="submit">Submit</string>
 
     <string name="notes">Notes</string>
     <string name="timer">Timer</string>
@@ -23,9 +24,7 @@
     <string name="settings">Settings</string>
     <string name="about">About</string>
 
-    <string name="sign_up">Sign Up</string>
-    <string name="sign_in">Sign In</string>
-    <string name="continue_guest">Continue as a Guest</string>
-    <string name="username">User Name</string>
-    <string name="birth_date">Birth Date</string>
+    <string name="exit">Press BACK again to exit.</string>
+    <string name="guest">Account Created, Welcome Guest!</string>
+
 </resources>
