--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,20 @@
 <resources>
     <string name="kronicle">Kronicle</string>
 
-    <string name="sign_up">Sign Up</string>
     <string name="sign_in">Sign In</string>
-    <string name="continue_guest">Continue as a Guest</string>
+    <string name="sign_up">Sign Up</string>
 
-    <string name="username">User Name</string>
-    <string name="birth_date">Birth Date</string>
     <string name="email">Email Address</string>
+    <string name="full_name">Full Name</string>
+    <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="guest">Continue as a Guest</string>
+
+    <string name="or">OR</string>
+    <string name="facebook">Facebook</string>
+    <string name="google">Google</string>
 
     <string name="notes">Notes</string>
     <string name="timer">Timer</string>
@@ -24,7 +29,7 @@
     <string name="settings">Settings</string>
     <string name="about">About</string>
 
-    <string name="exit">Press BACK again to exit.</string>
-    <string name="guest">Account Created, Welcome Guest!</string>
+    <string name="exit_toast">Press BACK again to exit.</string>
+    <string name="guest_toast">Account Created, Welcome Guest!</string>
 
 </resources>
