--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,10 @@
 
     <!--Timer Strings-->
     <string name="timer">Timer</string>
+
     <string name="title_timer">Title</string>
+    <string name="title_timer_key">Title for Timer</string>
+
 
     <string name="focus_timer">Focus</string>
     <string name="focus_time">2:00:00</string>
@@ -32,13 +35,23 @@
     <string name="long_break_timer">Long Break</string>
     <string name="long_break_time">4:00:00</string>
 
+    <string name="start">Start</string>
+    <string name="reset">Reset</string>
+    <string name="pause">Pause</string>
+
+    <!--Timer Settings-->
+
+
+
 
     <!--Habits Strings-->
     <string name="habits">Habits</string>
 
-    <string name="start">Start</string>
-    <string name="reset">Reset</string>
-    <string name="pause">Pause</string>
+
+    <!--Settings-->
+    <string name="general">General</string>
+
+
 
     <string name="home">Home</string>
     <string name="my_account">My Account</string>
