--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="exit_toast">Press BACK again to exit.</string>
     <string name="guest_toast">Account Created, Welcome Guest!</string>
     <string name="logout">Log Out</string>
+    <string name="name">Name</string>
 
 
 </resources>
